--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1061,3 +1061,75 @@ a {
     left: -1rem;
   }
 }
+.cid-tfnvgaPlbq {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-tfnvgaPlbq .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-tfnvgaPlbq .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-tfnvgaPlbq .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-tfnvgaPlbq .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-tfnvgaPlbq .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-tfnvgaPlbq .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-tfnvgaPlbq .media-container-row .social-list {
+  width: auto;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-tfnvgaPlbq .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-tfnvgaPlbq .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-tfnvgaPlbq .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-tfnvgaPlbq .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-tfnvgaPlbq .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-tfnvgaPlbq .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-tfnvgaPlbq .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-tfnvgaPlbq .media-container-row .mbr-text {
+  color: #ec2c2c;
+}
