--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1064,7 +1064,7 @@ a {
 .cid-tfnvgaPlbq {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #ffffff;
+  background-color: #ec2c2c;
 }
 .cid-tfnvgaPlbq .row-links {
   width: 100%;
@@ -1131,5 +1131,5 @@ a {
   width: 100%;
 }
 .cid-tfnvgaPlbq .media-container-row .mbr-text {
-  color: #ec2c2c;
+  color: #ffffff;
 }
